--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1212,6 +1212,7 @@ div.shadowy {
 }
 
 .custom-form-control .with-icon .icon {
+  pointer-events: none;
   position: absolute;
   right: 1rem;
   top: 50%;
