--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1344,6 +1344,7 @@ table.custom-table {
     .tab {
       position: relative;
       cursor: pointer;
+      transition: 0.4s ease;
 
       &::after {
         opacity: 0;
@@ -1354,6 +1355,7 @@ table.custom-table {
         height: 2px;
         width: 100%;
         background: $color1;
+        transition: 0.4s ease;
       }
 
       &.active {
