--- a/assets/css/utilities.css
+++ b/assets/css/utilities.css
@@ -1720,6 +1720,7 @@ textarea.custom-input[type="date"].active,
 #right-menu-login,
 #right-menu {
   position: fixed;
+  overflow-y: scroll;
   background: #fff;
   right: 0;
   top: 0;
