--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2244,10 +2244,16 @@ table.custom-table tr td {
 
 #transaction h2 .back {
   position: absolute;
-  top: 60%;
+  top: 50%;
   left: -1.75rem;
-  -webkit-transform: translateY(-60%);
-          transform: translateY(-60%);
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+@media screen and (max-width: 1023px) {
+  #transaction h2 .back {
+    left: -1.25rem;
+  }
 }
 
 #transaction h2::after {
